--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,7 +1,11 @@
 // Body
 $body-bg: white;
 
+
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+@mixin family($font) {
+    font-family: $font, "Arial Narrow", Arial, Helvetica, sans-serif;
+}
+$font-size-base: 1rem;
 $line-height-base: 1.6;
