--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,7 @@
 // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
+//@import url('https://fonts.bunny.net/css?family=Nunito');
+@import url('https://fonts.bunny.net/css?family=nunito-sans:300,400,500,700,900,300i,900i');
+@import url('https://fonts.bunny.net/css?family=open-sans:700');
 
 // Variables
 @import 'variables';
@@ -8,6 +10,8 @@
 @import "bootstrap/scss/bootstrap";
 
 @import "./style.scss";
+@import "../css/form-control.css";
+@import "../css/select.min.css";
 
 
 
